--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: Oak Hill is a private Christian school in Northern VA which offers 
   for preschool through 12th grade and international students. Located outside of
   DC.
 baseurl: ''
-url: https://oakhill.seththoburn.com
+url: https://oakhillchristianschool.github.io/oak-hill-website/
 twitter_username: jekyllrb
 github_username: jekyll
 markdown: kramdown
