--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 - title: About
   pages:
   - title: Blog
-    url: /blog
+    url: http://oakhillk12.blogspot.com/
   - title: Our Campus
     url: /campus
   - title: History and Faith
