add current students page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -42,3 +42,7 @@
     url: /admissions-tuition
   - title: International Admissions and Tuition
     url: /international-admissions-tuition
+- title: Current Students
+  pages:
+  - title: Current Students
+    url: /current-students
