add virtual tour to navbar

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -34,6 +34,8 @@
     url: /apply
   - title: Visit
     url: /visit
+  - title: Virtual Tour
+    url: /virtual-tour
   - title: Admissions and Tuition
     url: /admissions-tuition
   - title: International Admissions and Tuition
