changed the metadescription for the home page

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Oak Hill Christian School
 email: office@oakhillk12.com
-description: Oak Hill is a private Christian school in Northern VA which offers classes
+description: Oak Hill is a private Christian school in Northern Virginia which offers classes
   for preschool through 12th grade and international students. Located outside of
   DC.
 baseurl: ''
