--- a/_data/calendar.yml
+++ b/_data/calendar.yml
@@ -1,24 +1,20 @@
 year: 2019-20
 events:
-  - date: August 27
-    event: Teachers’ Meeting (Teachers only)
-  - date: September 2
+  - date: September 7, 2020
     event: Labor Day
-  - date: September  3
+  - date: September 8
     event: First Day of School
-  - date: November 25-29
+  - date: November 23-27
     event: Thanksgiving Recess, School Closed
-  - date: December 23, 2019-January 3, 2020
+  - date: December 21, 2020-January 1, 2021
     event: Christmas Recess, School Closed
-  - date: January 6, 2020
-    event: First Day of School in 2020
-  - date: February 17
+  - date: January 4, 2021
+    event: First Day of School in 2021
+  - date: February 15
     event: Presidents' Day, School Closed
-  - date: April 6-10
+  - date: March 29-April 2
     event: Easter Recess, School Closed
-  - date: May 25
+  - date: May 31
     event: Memorial Day, School Closed
-  - date: To Be Announced
-    event: Graduation for Senior Class and 8th Graders
-  - date: June 10
+  - date: June 16
     event: Last Day of School
