--- a/_data/faculty.yml
+++ b/_data/faculty.yml
@@ -6,7 +6,7 @@
     Church, Lynchburg. He earned a B.A. at Grove City College studying business as
     well as Austrian economics under Dr. Hans F. Sennholz and hold a Juris Doctor
     from Pepperdine University School of Law.  Courses taught in past years:  Omnibus
-    (history, government, economics).
+    (history, government, economics).'
   image: assets/images/faculty/rthoburn.jpg
 - name: Michael Harkin
   bio: 'Michael Harkin is the Principal of the Oak Hill - Lynchburg Campus as well
