--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -31,7 +31,7 @@
   pages:
   - title: Clubs and Activites
     url: "/clubs-activities"
-  - title: Athletics
+  - title: Athletics/i-9 Sports
     url: "/athletics"
 - title: Admissions
   pages:
