--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,8 @@
     url: "/campus"
   - title: New Lynchburg Campus
     url: "/lynchburg-campus"
+  - title: Frequently Asked Questions
+    url: "/faqs"
   - title: History and Faith
     url: "/history-faith"
   - title: School Calendar and Hours
