add hybrid to nav

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,6 +23,8 @@
     url: http://oakhillk12.blogspot.com/
   - title: Our Campus
     url: "/campus"
+  - title: High School Hybrid Program
+    url: "/high-school-hybrid"
   - title: New Lynchburg Campus
     url: "/lynchburg-campus"
   - title: Frequently Asked Questions
