Update Gonzalez bio

--- a/_data/faculty.yml
+++ b/_data/faculty.yml
@@ -146,7 +146,7 @@
 - name: Yanet Birehan, Assistant Teacher, OH since 2019
   bio: ""
   image: "/assets/images/faculty/yanet-birehan.png"
-- name: Moriah Gonzalez, Pre-Kindergarten, OH since 2014
+- name: Moriah Gonzalez, Junior Kindergarten, OH since 2014
   bio: ""
   image: "/assets/images/faculty/moriah-gonzalez.png"
 - name: Nery Washington, Reading and Assistant Teacher, OH since 2019
